# work_engati

./: .gitignore  main.py  pyproject.toml  test.py
app/core/: config.py
app/docs/: __init__.py  router.py  schemas.py  service.py
app/vectorstore/: __init__.py  mongo_atlas.py
